# HomeERP

./: .dockerignore  .gitignore  CLA.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: database.py  main.py  models.py  schemas.py
backend/routers/: app_settings.py  categories.py  data_transfer.py  ean_lookup.py  products.py  stock.py  tags.py  units.py  vaults.py
frontend/: index.html  package-lock.json  package.json  vendor-copy.js  vite.config.js
frontend/css/: styles.css
frontend/js/: api.js  app.js  categories.js  dashboard.js  data_transfer.js  i18n.js  inventory.js  products.js  scanner.js  settings.js  stock.js  stockid.js  units.js  vaults.js
frontend/js/locales/: de.js  en.js
frontend/src/: app.css  app.html
frontend/src/lib/: i18n.js  toast.js  utils.js
frontend/src/lib/components/: BarcodeScanner.svelte  ConfirmDialog.svelte  StockEntryModal.svelte  ToastContainer.svelte  UnitConversionEditor.svelte
frontend/src/routes/: +layout.svelte
frontend/static/: manifest.json
frontendv2/: package.json  svelte.config.js
frontendv2/src/lib/: api.js  i18n.js
migrations/: env.py
migrations/versions/: a03c4b9cf623_initial_schema_with_units.py  a1b2c3d4e5f6_add_entry_unit_key_to_products.py  b14d2e8fa901_add_unit_id_to_products.py  b5c6d7e8f9a0_change_product_size_to_float.py  c25f3a1db042_add_product_categories.py  d36e4c2fa183_add_stock_entry_qr_codes.py  e47b5d3ca291_add_settings_table.py  f58b6e4db392_add_product_unit_conversions.py
(+17 files in other folders)
