[tool.poetry]
name = "homeerp"
version = "0.1.0"
description = "Home stock management"
authors = []
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.111"
uvicorn = {extras = ["standard"], version = ">=0.29"}
sqlalchemy = ">=2.0"
pydantic = ">=2.7"
python-multipart = ">=0.0.9"
alembic = ">=1.13"
httpx = ">=0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
